force-app/main/default/objects/RE_CND_Conga_Output_Settings__c/RE_CND_Conga_Output_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>RE CND Conga Output Settings</label>
</CustomObject>