force-app/main/default/objects/RE_CND_Conga_Output_Settings__c/fields/Display_English_Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Display_English_Product_Group__c</fullName>
    <label>Display English Product Group</label>
    <length>100</length>
    <type>Text</type>
</CustomField>