force-app/main/default/objects/RE_CND_Conga_Output_Settings__c/fields/Display_French_Rack_Name__c.field-meta.xml
<CustomField>
    <fullName>Display_French_Rack_Name__c</fullName>
    <label>Display French Rack Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>