force-app/main/default/objects/RE_CND_Conga_Output_Settings__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <label>Group</label>
    <length>9</length>
    <type>Text</type>
</CustomField>