force-app/main/default/objects/RE_CND_Conga_Output_Settings__c/fields/Location_Code__c.field-meta.xml
<CustomField>
    <fullName>Location_Code__c</fullName>
    <label>Location Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>