force-app/main/default/objects/RE_CND_Conga_Output_Settings__c/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <label>Product Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>