force-app/main/default/objects/RE_CND_Conga_Output_Settings__c/fields/Rack_Name__c.field-meta.xml
<CustomField>
    <fullName>Rack_Name__c</fullName>
    <label>Rack Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>