force-app/main/default/objects/RE_CND_Conga_Output_Settings__c/fields/Section_Name__c.field-meta.xml
<CustomField>
    <fullName>Section_Name__c</fullName>
    <label>Section Name</label>
    <length>10</length>
    <type>Text</type>
</CustomField>